[project]
  name = "webflow_webflow"
  description = "Pulumi provider for managing Webflow sites, redirects, and robots.txt."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "1.0.0a0+dev"
  [project.urls]
    Homepage = "https://github.com/jdetmar/pulumi-webflow"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      webflow_webflow = ["py.typed", "pulumi-plugin.json"]
